--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -47,6 +47,21 @@ img {
 input[type="file"] { display: none; }
 
 //---------------------------------------------- BASE CLASSES ----------------------------------------------//
+.userImageContainer{
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+}
+
+.userImage{
+    position: absolute;
+    height: 101%;
+    width: 101%;
+    left:50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+}
 
 .required{
     position: relative;
@@ -118,5 +133,54 @@ input[type="file"] { display: none; }
             &:hover { text-decoration: underline; }
         }
     }
+}
+
+
+.languagepicker {
+    background-color: #FFF;
+    display: inline-block;
+    padding: 0;
+    height: 40px;
+    overflow: hidden;
+    transition: all .3s ease;
+    margin: 0 50px 10px 0;
+    vertical-align: top;
+    float: left;
+}
+
+.languagepicker:hover {
+    /* don't forget the 1px border */
+    height: 81px;
+}
+
+.languagepicker a{
+    color: #000;
+    text-decoration: none;
+}
+
+.languagepicker li {
+    display: block;
+    padding: 0px 5px;
+    line-height: 40px;
+    border-top: 1px solid #EEE;
+}
+
+.languagepicker li:hover{
+    background-color: #EEE;
+}
+
+.languagepicker li:first-child{
+    border: none;
+    background: #FFF !important;
+}
+
+.languagepicker li img {
+    margin-right: 5px;
+    height: 32px;
+    width: 32px;
+}
+
+.roundborders {
+    border-radius: 5px;
 }
 
