--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,156 +1,2 @@
-body {
-  background-color: black; }
-
-*, *::before, *::after {
-  webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-.file-input {
-  display: block;
-  position: relative;
-  height: 10em;
-  width: 10em; }
-  .file-input::after {
-    content: "Changer l'avatar";
-    position: absolute;
-    color: white;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(72, 72, 72, 0.7);
-    border: solid white 1px;
-    transform: scale(0) rotate(-360deg);
-    opacity: 0;
-    transition: opacity ease-out 250ms, transform ease-out 250ms; }
-  .file-input:hover::after {
-    opacity: 1;
-    transform: scale(1) rotate(0); }
-
-img {
-  width: 100%;
-  height: 100%; }
-
-input[type="file"] {
-  display: none; }
-
-.userImageContainer {
-  position: relative;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%; }
-
-.userImage {
-  position: absolute;
-  height: 101%;
-  width: 101%;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%); }
-
-.required {
-  position: relative; }
-  .required b::after {
-    content: "*";
-    color: red;
-    position: absolute;
-    right: -10px;
-    top: -5px; }
-
-/**[data-tooltip]{
-    position: relative;
-
-    &::before{
-        content: " ";
-        position: absolute;
-        left: calc(100% - 8px);
-        top: 25%;
-        height: 0;
-        width: 0;
-        border-bottom: 10px solid transparent;
-        border-top: 10px solid transparent;
-        border-right: 10px solid rgba(255,0,0,0.8);
-    }
-
-    &::after{
-        content: attr(data-tooltip);
-        display: block;
-        position: absolute;
-        color: rgba(0,0,0,.8);
-        background-color: rgba(255,255,255,0.8);
-        padding: .5em 1.5em;
-        border-radius: 5px;
-        border: 2px solid rgba(255,0,0,0.8);
-        left: 100%;
-        top: 0;
-    }
-}*/
-.round {
-  border-radius: 50%; }
-
-.profile-cart {
-  display: block;
-  position: relative;
-  height: 30em;
-  width: 50em;
-  background-color: darkgrey;
-  border-radius: 1em; }
-  .profile-cart .image {
-    position: absolute;
-    width: 10em;
-    top: 2em;
-    left: 2em; }
-    .profile-cart .image button {
-      width: 100%;
-      border: none;
-      background: none;
-      color: white;
-      outline: none; }
-      .profile-cart .image button:hover {
-        text-decoration: underline; }
-
-.languagepicker {
-  background-color: #FFF;
-  display: inline-block;
-  padding: 0;
-  height: 40px;
-  overflow: hidden;
-  transition: all .3s ease;
-  margin: 0 50px 10px 0;
-  vertical-align: top;
-  float: left; }
-
-.languagepicker:hover {
-  /* don't forget the 1px border */
-  height: 81px; }
-
-.languagepicker a {
-  color: #000;
-  text-decoration: none; }
-
-.languagepicker li {
-  display: block;
-  padding: 0px 5px;
-  line-height: 40px;
-  border-top: 1px solid #EEE; }
-
-.languagepicker li:hover {
-  background-color: #EEE; }
-
-.languagepicker li:first-child {
-  border: none;
-  background: #FFF !important; }
-
-.languagepicker li img {
-  margin-right: 5px;
-  height: 32px;
-  width: 32px; }
-
-.roundborders {
-  border-radius: 5px; }
-
+body{background-color:lightgrey}.container-fluid{padding:0}*,*::before,*::after{webkit-box-sizing:border-box;box-sizing:border-box}img{max-width:100%;height:100%}input[type="file"]{display:none}.file-input{display:block;position:relative;height:10em;width:10em}.file-input::after{content:"Changer l'avatar";position:absolute;color:white;top:0;left:0;bottom:0;right:0;border-radius:50%;display:flex;align-items:center;justify-content:center;background-color:rgba(72,72,72,0.7);border:solid white 1px;transform:scale(0) rotate(-360deg);opacity:0;transition:opacity ease-out 250ms, transform ease-out 250ms}.file-input:hover::after{opacity:1;transform:scale(1) rotate(0)}.userImageContainer{position:relative;height:150px;width:150px;border-radius:50%}.userImage{position:absolute;height:101%;width:101%;left:50%;top:50%;transform:translate(-50%, -50%)}.required{position:relative}.required b::after{content:"*";color:red;position:absolute;right:-10px;top:-5px}.round{border-radius:50%}.profile-cart{display:block;position:relative;height:30em;width:50em;background-color:darkgrey;border-radius:1em}.profile-cart .image{position:absolute;width:10em;top:2em;left:2em}.profile-cart .image button{width:100%;border:none;background:none;color:white;outline:none}.profile-cart .image button:hover{text-decoration:underline}.imageDropdown{width:40;display:block;position:relative;cursor:pointer;height:20px}.imageDropdown>div{height:20px;margin-bottom:18px}.imageDropdown>div::after{content:"";position:absolute;top:4.5px;left:35px;display:block;background-image:url("../images/dropdown-arrow.png");background-position:top center;background-size:cover;width:11px;height:10px}.imageDropdown>div:hover::after{background-position:bottom center}.imageDropdown img{height:20px;width:30px}.imageDropdown:not(:hover)>ul{padding:0;background:#dddddd;z-index:99}.imageDropdown:not(:hover)>ul>*{visibility:hidden;height:0;padding-top:0;padding-bottom:0;margin:0;color:rgba(25,25,25,0);transition:0.5s 0.1s height, 0.5s 0.1s padding, 0.5s 0.1s margin, 0.3s color, 0.6s visibility;z-index:99}.imageDropdown ul{width:150px;padding:0 0;position:absolute;background-color:rgba(0,14,12,0.9);z-index:100;transition:0.5s padding, 0.5s background}.imageDropdown ul li:first-child>a{padding-top:5px}.imageDropdown ul>*{overflow:hidden;height:30px;background:transparent;white-space:nowrap;transition:0.5s height cubic-bezier(0.73, 0.32, 0.34, 1.5),0.5s padding cubic-bezier(0.73, 0.32, 0.34, 1.5),0.5s margin cubic-bezier(0.73, 0.32, 0.34, 1.5),0.5s 0.2s color,0.2s background-color}.imageDropdown ul>* a{text-decoration:none;display:block;padding:0 5px 5px 5px;width:100%;height:100%}.imageDropdown ul>* .active{color:white;text-shadow:0 0 5px #369,0 0 5px #369,0 0 15px #369}.imageDropdown ul>* img{margin-right:3px}#settingsMenu{position:fixed;top:56.5px;left:0;background-image:url(../images/settings-menu-background.png);background-position:right bottom;background-size:cover;background-repeat:no-repeat;padding:10px 76px 0 10px;margin:0;z-index:9998;list-style-type:none;text-align:left}#settingsMenu>li{display:inline-block;vertical-align:text-top}#settingsMenu .hasChildren{osition:static;padding-bottom:18px}#settingsMenu img.settingsIcon{opacity:.7;height:15px;margin-left:20px;margin-right:10px}a{color:#ccc}a:hover{color:white;text-shadow:0 0 5px #369,0 0 5px #369,0 0 15px #369}a:hover img.settingsIcon{opacity:.9}
 /*# sourceMappingURL=style.css.map */
