--- a/baseProject/assets/scss/create.scss
+++ b/baseProject/assets/scss/create.scss
@@ -1,158 +1,21 @@
-/* COBALT
-
-$theme-color: #DED8CD;
-$theme-color-active: white;
-$theme-body-color: #011E3A;
-$theme-bg-color: #002f59;
-$theme-bg-color-active: #002240;
-*/
-
-/* CRISMON 
-
-$theme-color: #52575C;
-$theme-color-active: white;
-$theme-body-color: #EBEBEB;
-$theme-bg-color: #FFFFFF;
-$theme-bg-color-active: #B4B3B3;
-*/
-
-/*
-    All Fonts
-*/
-
-@font-face {
-    font-family: 'GothamRounded';
-    src: url(../fonts/GothamRounded-Light.otf);
-    font-weight: 300;
-}
-@font-face {
-    font-family: 'GothamRounded';
-    src: url(../fonts/GothamRounded-Book.otf);
-    font-weight: normal;
-}
-@font-face {
-    font-family: 'GothamRounded';
-    src: url(../fonts/GothamRounded-Medium.otf);
-    font-weight: 500;
-}
-@font-face {
-    font-family: 'GothamRounded';
-    src: url(../fonts/GothamRounded-Bold.otf);
-    font-weight: bold;
-}
-
-@mixin background-size($property){
-    -webkit-background-size: $property;
-    -moz-background-size: $property;
-    -o-background-size: $property;
-    background-size: $property;
-}
-
-$themeColor: #DED8CD;
-$themeColorActive: white;
-$themeBodyColor: #2F3129;
-$themeBgColor: #353632;
-$themeBgColorActive: #272822;
+$vars: (
+  yellow: #ff0,
+  blk: #000,
+  lightblue: #a1dfcd,
+  ff: sans-serif,
+  fw-n: 300,
+  fw-m: 600,
+  fw-b: 800,
+);
 
 @mixin var($property, $variable) {
-    #{$property}: #{$variable};//map-get($vars, $variable);
-  //#{$property}: var(--#{$variable});
-}
-//:root {
-  //  @each $property, $value in $vars {
-    //    --#{$property}: #{$value};
-    //}
-//}
-.theme-color{
-    @include var(color, $themeColor);
-}
-.theme-color-active{
-    @include var(color, $themeColorActive);
-}
-.theme-body-color{
-    @include var(background-color, $themeBodyColor);
-}
-.theme-bg-color{
-    @include var(background-color, $themeBgColor);
-    border: 1px solid rgba(0,0,0,0.4) !important;
-}
-.theme-bg-color-active{
-    @include var(background-color, $themeBgColorActive);
-    border: 1px solid rgba(0,0,0,0.8) !important;
+  #{$property}: map-get($vars, $variable);
+  #{$property}: var(--#{$variable});
 }
 
-$break-small: 576px;
-$break-medium: 768px;
-$break-large: 992px;
-$break-extra-large: 1200px;
 
-@media (max-width: $break-small) {
-
-}
-@media (max-width: $break-medium) {
-
-}
-@media (max-width: $break-large) {
-
-}
-@media (max-width: $break-extra-large) {
-
-}
-/*
-    Pages base
-*/
-
-body {
-    font-family: GothamRounded;
-}
-html, body, ul, ol {
-    margin:  0;
-    padding: 0;
-}
-#pageTop{
-    @include background-size(cover);
-    background-image: url("../images/background.jpeg");
-    background-repeat: no-repeat;
-    background-position: left center;
-    height: 10%;
-}
-/*
-    Editor Page Style
-*/
-
-%select-shared{
-    max-width: 33.33%;
-    float: left;
-    padding-left: 10%;
-    text-align: center;
-}
-#editorTheme{
-    @extend %select-shared;
-}
-#editorLangage{
-    @extend %select-shared;
-}
-#editorFontSize{
-    @extend %select-shared;
-}
-%size-shared {
-    position: absolute;
-    width: calc(100% - 32px);
-    top: calc(9rem + 40.5px);
-    min-height: 10rem;
-    bottom: 16px;
-    margin-left: 16px;
-}
-#editor{
-    @extend %size-shared;
-}
-#output {
-    @extend %size-shared;
-    overflow-y: scroll;
-    float: none;
-    background-color: white;
-}
-#editorTabs {
-    position: absolute;
-    top: 9rem;
+:root {
+  @each $property, $value in $vars {
+    --#{$property}: #{$value};
+  }
 }
