--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,96 +1,2 @@
-#questionEditor, #codeEditor, #inputEditor {
-  position: relative;
-  width: 100%;
-  height: 500px; }
-
-.container {
-  max-width: 100%;
-  width: 95%; }
-  .container .row .col {
-    padding: 0; }
-
-#modeSelector {
-  margin-bottom: 0;
-  background-color: darkgrey;
-  border-radius: 5px 5px 0 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  height: 74px; }
-  #modeSelector div {
-    height: 100%; }
-    #modeSelector div div {
-      height: 100%; }
-  #modeSelector input {
-    display: none; }
-    #modeSelector input + label {
-      opacity: 0.25;
-      padding-left: 0;
-      width: 64px;
-      height: 100%;
-      display: block;
-      margin: 0 auto; }
-      #modeSelector input + label > img {
-        border-radius: 50%;
-        height: 100%;
-        width: 100%; }
-      #modeSelector input + label::after, #modeSelector input + label::before {
-        display: none; }
-    #modeSelector input:checked + label {
-      opacity: 1; }
-      #modeSelector input:checked + label > img {
-        border: solid white 1px; }
-
-#passwordDifficultyProgressBar {
-  width: 150px;
-  height: 10px;
-  border-radius: 5px;
-  background-color: darkgrey; }
-  #passwordDifficultyProgressBar #passwordDifficultyProgressBarForeground {
-    height: 100%;
-    width: 0;
-    background-color: red;
-    border-radius: 5px; }
-
-#inputEditorContainer {
-  position: relative; }
-
-#inputExample {
-  position: absolute;
-  z-index: 50;
-  background-color: white;
-  border: solid grey 2px;
-  height: 0px;
-  bottom: 0.2em;
-  left: 0.3em;
-  right: 0.3em;
-  overflow: scroll;
-  opacity: 0;
-  transition: opacity 250ms, height 250ms; }
-  #inputExample.opened {
-    height: 150px;
-    opacity: 1; }
-  #inputExample .content {
-    margin: 0 .25em;
-    width: calc(100% - .5em);
-    white-space: nowrap; }
-
-#smallMenu {
-  display: grid;
-  grid-template-columns: 7.5rem 1fr;
-  grid-gap: .2em; }
-  #smallMenu #languageSelector > a {
-    margin-left: 0.8em; }
-  #smallMenu #languageSelector > ul {
-    background-color: black;
-    border-radius: 0 0 5px 0; }
-    #smallMenu #languageSelector > ul a {
-      display: grid;
-      grid-template-columns: 30px 1fr;
-      grid-gap: .2em;
-      align-items: center;
-      height: 100%; }
-  #smallMenu #languageSelector li {
-    padding: .4em .8em;
-    display: block; }
-
+#questionEditor,#codeEditor,#inputEditor{position:relative;width:100%;height:500px}.container{max-width:100%;width:95%}.container .row .col{padding:0}#modeSelector{margin-bottom:0;background-color:darkgrey;border-radius:5px 5px 0 0;padding-top:5px;padding-bottom:5px;height:74px}#modeSelector div{height:100%}#modeSelector div div{height:100%}#modeSelector input{display:none}#modeSelector input+label{opacity:0.25;padding-left:0;width:64px;height:100%;display:block;margin:0 auto}#modeSelector input+label>img{border-radius:50%;height:100%;width:100%}#modeSelector input+label::after,#modeSelector input+label::before{display:none}#modeSelector input:checked+label{opacity:1}#modeSelector input:checked+label>img{border:solid white 1px}#passwordDifficultyProgressBar{width:150px;height:10px;border-radius:5px;background-color:darkgrey}#passwordDifficultyProgressBar #passwordDifficultyProgressBarForeground{height:100%;width:0;background-color:red;border-radius:5px}#inputEditorContainer{position:relative}#inputExample{position:absolute;z-index:50;background-color:white;border:solid grey 2px;height:0px;bottom:0.2em;left:0.3em;right:0.3em;overflow:scroll;opacity:0;-webkit-transition:opacity 250ms, height 250ms;transition:opacity 250ms, height 250ms}#inputExample.opened{height:150px;opacity:1}#inputExample .content{margin:0 .25em;width:calc(100% - .5em);white-space:nowrap}.languageSelector{position:relative}.languageSelector>a>img{vertical-align:middle}.languageSelector>div{display:none;position:absolute;right:0;padding:.5em 0 .5em 0;-ms-grid-rows:2em 2em;grid-template-rows:2em 2em;background-color:black;border-radius:0 0 0 8%}.languageSelector>div a{display:-ms-grid;display:grid;-ms-grid-columns:1fr 30px;grid-template-columns:1fr 30px;grid-gap:.5em;place-items:center;line-height:100%}.languageSelector:hover>div{display:-ms-grid;display:grid}a.brand-logo{height:100%;padding-left:0.5em}a.brand-logo>.logo{width:auto;height:100%}
 /*# sourceMappingURL=style.css.map */
