--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,46 +10,6 @@
         padding: 0;
     }
 }
-#modeSelector {
-    margin-bottom: 0;
-    background-color: darkgrey;
-    border-radius: 5px 5px 0 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    height: 74px;
-    & div{
-        height: 100%;
-        & div{
-            height: 100%;
-        }
-    }
-    & input{
-        display:none;
-
-        &+label{
-            opacity: 0.25;
-            padding-left: 0;
-            width: 64px;
-            height: 100%;
-            display: block;
-            margin: 0 auto;
-            &>img{
-                border-radius: 50%;
-                height: 100%;
-                width: 100%;
-            }
-            &::after, &::before {
-                display: none;
-            }
-        }
-        &:checked+label{
-            opacity: 1;
-            &>img{
-                border: solid white 1px;
-            }
-        }
-    }
-}
 #passwordDifficultyProgressBar{
     width: 150px;
     height: 10px;
@@ -89,18 +49,61 @@
         white-space: nowrap;
     }
 }
+#duelCreation{
+    & .modal-content{
+        display: grid;
+        grid-template-columns : 1fr 1fr;
+        & > div{
+            grid-column: span 2;
+        }
+    }
+}
 
+//------------------------------------ NAVBAR ------------------------------------//
+.score-row{
+    display: grid;
+    grid-template-columns: 100px 64px 1fr 1fr;
+}
+.navbar{
+    background-image: url(../images/navbar.png);
+    background-color: transparent;
+    height: 103px;
+    box-shadow: none;
+    background-repeat: no-repeat;
+}
+.navbar-fixed {
+    height: 110px;
+}
+a.brand-logo{
+    height: 80%;
+    padding-left: 0.5em;
+    transition: transform 250ms;
+    outline: none;
+    & > .logo{
+        width: auto;
+        height: 100%;
+    }
+    &:hover{
+        transform: translate(-50%) scale(1.1);
+    }
+}
+li > a{
+    &.left, &.right{
+        padding-right: 5px;
+        padding-left: 5px;
+    }
+}
 .languageSelector{
     position: relative;
     & > a > img{
         vertical-align: middle; 
     }
     & > div{
-        z-index: 999;
+        z-index: -1;
         display: none;
         position: absolute;
         right: 0;
-        padding: .5em 0 .5em 0;
+        padding: 2.5em 0 .5em 0;
         grid-template-rows: 2em 2em;
         background-color: black;
         border-radius: 0 0 0 8%;
@@ -113,7 +116,7 @@
         }
     }
 
-    &:hover > div{
+    &:active > div{
         display: grid;
     }
 
@@ -126,29 +129,64 @@
         }
     }
 }
+//------------------------------------ MODE SELECTOR ------------------------------------//
+#modeSelector {
+    display: grid;
+    grid-template-columns : repeat(4, 32px);
+    grid-gap: .4em;
+    justify-content: center;
+    height: 32px;
+    & div{
+        height: inherit;
+    }
+    & input{
+        display:none;
 
-a.brand-logo{
-    height: 100%;
-    padding-left: 0.5em;
-    & > .logo{
-        width: auto;
-        height: 100%;
+        &+label{
+            height: inherit;
+            opacity: 0.25;
+            padding-left: 0;
+            &>img{
+                height: inherit;
+                border-radius: 50%;
+            }
+            &::after, &::before {
+                display: none;
+            }
+        }
+        &:checked+label{
+            opacity: 1;
+            &>img{
+                -webkit-box-shadow: 0px 0px 5px 5px rgba(227,163,0,0.69);
+                -moz-box-shadow: 0px 0px 5px 5px rgba(227,163,0,0.69);
+                box-shadow: 0px 0px 5px 5px rgba(227,163,0,0.69); 
+            }
+        }
     }
 }
 
-li > a{
-    &.left, &.right{
-        padding-right: 5px;
-        padding-left: 5px;
+//------------------------------------ MEDIUM TO MAX SIZE ------------------------------------//
+@media (min-width: 992px) {
+    //------------------------------------ NAVBAR ------------------------------------//
+    a.brand-logo:hover{
+        transform: scale(1.1);
     }
-}
+    .navbar-fixed {
+        height: 120px;
+    }
 
-#duelCreation{
-    & .modal-content{
-        display: grid;
-        grid-template-columns : 1fr 1fr;
-        & > div{
-            grid-column: span 2;
+    #modeSelector {
+        grid-template-columns : repeat(4, 64px);
+        height: 64px;
+        grid-gap: .7em;
+        & input{
+            &:checked+label{
+                &>img{
+                    -webkit-box-shadow: 0px 0px 10px 10px rgba(227,163,0,0.69);
+                    -moz-box-shadow: 0px 0px 10px 10px rgba(227,163,0,0.69);
+                    box-shadow: 0px 0px 10px 10px rgba(227,163,0,0.69); 
+                }
+            }
         }
     }
 }
