--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 #questionEditor, #codeEditor, #inputEditor {
   position: relative;
-  width: 100%;
-  height: 500px; }
+  width: inherit; }
 
 .container {
   max-width: 100%;
@@ -9,12 +8,12 @@
   .container .row .col {
     padding: 0; }
 
-#passwordDifficultyProgressBar {
+.difficultyProgressBar {
   width: 150px;
   height: 10px;
   border-radius: 5px;
   background-color: darkgrey; }
-  #passwordDifficultyProgressBar #passwordDifficultyProgressBarForeground {
+  .difficultyProgressBar .difficultyProgressBarForeground {
     height: 100%;
     width: 0;
     background-color: red;
@@ -23,35 +22,11 @@
 #inputEditorContainer {
   position: relative; }
 
-#inputExample {
-  position: absolute;
-  z-index: 50;
-  background-color: white;
-  border: solid grey 2px;
-  height: 0px;
-  bottom: 0.2em;
-  left: 0.3em;
-  right: 0.3em;
-  overflow: scroll;
-  opacity: 0;
-  transition: opacity 250ms, height 250ms; }
-  #inputExample.opened {
-    height: 150px;
-    opacity: 1; }
-  #inputExample .content {
-    margin: 0 .25em;
-    width: calc(100% - .5em);
-    white-space: nowrap; }
-
 #duelCreation .modal-content {
   display: grid;
   grid-template-columns: 1fr 1fr; }
   #duelCreation .modal-content > div {
     grid-column: span 2; }
-
-.score-row {
-  display: grid;
-  grid-template-columns: 100px 64px 1fr 1fr; }
 
 .navbar {
   background-image: url(../images/navbar.png);
@@ -61,6 +36,7 @@
   background-repeat: no-repeat; }
 
 .navbar-fixed {
+  z-index: 1000;
   height: 110px; }
 
 a.brand-logo {
@@ -77,34 +53,6 @@ a.brand-logo {
 li > a.left, li > a.right {
   padding-right: 5px;
   padding-left: 5px; }
-
-.languageSelector {
-  position: relative; }
-  .languageSelector > a > img {
-    vertical-align: middle; }
-  .languageSelector > div {
-    z-index: -1;
-    display: none;
-    position: absolute;
-    right: 0;
-    padding: 2.5em 0 .5em 0;
-    grid-template-rows: 2em 2em;
-    background-color: black;
-    border-radius: 0 0 0 8%; }
-    .languageSelector > div a {
-      display: grid;
-      grid-template-columns: 1fr 30px;
-      grid-gap: .5em;
-      place-items: center;
-      line-height: 100%; }
-  .languageSelector:active > div {
-    display: grid; }
-  .languageSelector.mobile > div {
-    right: 25%;
-    left: 32px;
-    border-radius: 0 0 10px 10px; }
-    .languageSelector.mobile > div a {
-      grid-template-columns: 30px 1fr; }
 
 #modeSelector {
   display: grid;
@@ -131,6 +79,141 @@ li > a.left, li > a.right {
         -webkit-box-shadow: 0px 0px 5px 5px rgba(227, 163, 0, 0.69);
         -moz-box-shadow: 0px 0px 5px 5px rgba(227, 163, 0, 0.69);
         box-shadow: 0px 0px 5px 5px rgba(227, 163, 0, 0.69); }
+
+body {
+  background-color: #443127; }
+
+p {
+  text-align: center; }
+
+.big-container {
+  width: 80%; }
+
+.md-container {
+  width: 70%; }
+
+.big-container, .md-container {
+  margin: 0 auto; }
+
+.score-row {
+  display: grid;
+  grid-template-columns: 100px 64px 1fr 1fr; }
+
+.dropdown {
+  z-index: 998;
+  position: absolute;
+  right: 0;
+  top: 67px;
+  width: 200px;
+  height: 0px;
+  transform-origin: top;
+  transition: height 250ms ease-in-out; }
+  .dropdown.active {
+    height: 99px; }
+  .dropdown .top {
+    background-image: url(../images/dropdownTop.png); }
+  .dropdown .bottom {
+    background-image: url(../images/dropdownBottom.png); }
+  .dropdown .top, .dropdown .bottom {
+    width: inherit;
+    height: 29px;
+    background-size: cover; }
+  .dropdown > .content {
+    background-image: url(../images/dropdownMiddle.png);
+    background-size: cover;
+    width: inherit;
+    height: inherit;
+    overflow: hidden; }
+
+.nav-link {
+  border: none;
+  background-color: transparent; }
+
+.password {
+  display: grid;
+  grid-template-columns: 1fr 50px; }
+
+.btn-password {
+  position: relative;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #9e9e9e;
+  margin: 0 0 20px 0; }
+  .btn-password:hover, .btn-password:focus, .btn-password:active {
+    background: none; }
+  .btn-password::after {
+    content: " ";
+    position: absolute;
+    height: 60%;
+    width: 100%;
+    border-left: 1px solid #9e9e9e;
+    top: 20%;
+    left: 0; }
+
+.passwordStrength {
+  position: absolute;
+  right: 60px;
+  top: 18px;
+  width: 150px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: darkgrey; }
+  .passwordStrength .passwordStrengthForeground {
+    height: 100%;
+    border-radius: 5px; }
+
+.passwordStrengthForeground[strength="0"] {
+  background-color: red;
+  width: 0; }
+.passwordStrengthForeground[strength="1"] {
+  background-color: red;
+  width: 20%; }
+.passwordStrengthForeground[strength="2"] {
+  background-color: yellow;
+  width: 40%; }
+.passwordStrengthForeground[strength="3"] {
+  background-color: yellow;
+  width: 60%; }
+.passwordStrengthForeground[strength="4"] {
+  background-color: orange;
+  width: 80%; }
+.passwordStrengthForeground[strength="5"] {
+  background-color: green;
+  width: 100%; }
+
+.collapsible, .collapsible-body, .collapsible-header {
+  border: none; }
+
+.collapsible-header {
+  background-color: #660107;
+  border-bottom: 1px solid black; }
+
+.editor {
+  height: 500px; }
+
+.relative {
+  position: relative; }
+
+#inputExample {
+  position: absolute;
+  z-index: 50;
+  background-color: white;
+  border: solid grey 2px;
+  height: 0px;
+  bottom: 0.2em;
+  left: 0.3em;
+  right: 0.3em;
+  overflow: scroll;
+  opacity: 0;
+  transition: opacity 250ms, height 250ms; }
+  #inputExample .content {
+    margin: 0 .25em;
+    width: calc(100% - .5em);
+    white-space: nowrap; }
+
+.active #inputExample {
+  height: 150px;
+  opacity: 1; }
 
 @media (min-width: 992px) {
   a.brand-logo:hover {
